--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
 h1 {
     color: red;
     text-align: center;
+        text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000
 }
