--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 h1 {
     color: red;
     text-align: center;
+	font-size: 300%;
+	text-decoration: underline;
         text-shadow:
 		-1px -1px 0 #000,
 		1px -1px 0 #000,
