--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
 h1 {
     color: red;
-    text-align: center;
-	font-size: 420%;
-	text-decoration: underline;
+    font-size: 420%;
+text-decoration: underline;
         text-shadow:
 		-1px -1px 0 #000,
 		1px -1px 0 #000,
 		-1px 1px 0 #000,
 		1px 1px 0 #000
+	.center-screen {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
 }
 body {
     -webkit-animation:spin 10s linear infinite;
