--- a/style.css
+++ b/style.css
@@ -7,11 +7,8 @@ text-decoration: underline;
 		1px -1px 0 #000,
 		-1px 1px 0 #000,
 		1px 1px 0 #000
-
-  align-items: center;
-  text-align: center;
 }
-body {
+div {
     -webkit-animation:spin 10s linear infinite;
     -moz-animation:spin 10s linear infinite;
     animation:spin 10s linear infinite;
