--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ text-decoration: underline;
 		1px 1px 0 #000
 }
 div {
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
     -webkit-animation:spin 10s linear infinite;
     -moz-animation:spin 10s linear infinite;
     animation:spin 10s linear infinite;
