--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ text-decoration: underline;
 		-1px 1px 0 #000,
 		1px 1px 0 #000
 }
+audio { 
+   display:none;
+}
 div {
 	display: block;
     margin-left: auto;
