--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-h1 {
+h1, h4 {
     color: red;
     font-size: 420%;
 text-decoration: underline;
@@ -16,9 +16,9 @@ div {
     margin-left: auto;
     margin-right: auto;
     width: 50%;
-    -webkit-animation:spin 0.5s linear infinite;
-    -moz-animation:spin 0.5s linear infinite;
-    animation:spin 0.5s linear infinite;
+    -webkit-animation:spin 0.8s linear infinite;
+    -moz-animation:spin 0.8s linear infinite;
+    animation:spin 0.8s linear infinite;
 }
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
