--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
-h1, h4 {
+h1 {
     color: red;
     font-size: 420%;
+text-decoration: underline;
+        text-shadow:
+		-1px -1px 0 #000,
+		1px -1px 0 #000,
+		-1px 1px 0 #000,
+		1px 1px 0 #000
+}
+h4 {
+    color: red;
 text-decoration: underline;
         text-shadow:
 		-1px -1px 0 #000,
