--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ text-decoration: underline;
 		-1px 1px 0 #000,
 		1px 1px 0 #000
 }
-h4 {
+p {
     color: red;
 text-decoration: underline;
         text-shadow:
