--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ text-decoration: underline;
 p {
     color: red;
 text-decoration: underline;
+	font-size: 100%;
         text-shadow:
 		-1px -1px 0 #000,
 		1px -1px 0 #000,
