--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ text-decoration: underline;
 		1px -1px 0 #000,
 		-1px 1px 0 #000,
 		1px 1px 0 #000
-		h1 {
+p {
     color: red;
     font-size: 150%;
 text-decoration: underline;
