--- a/style.css
+++ b/style.css
@@ -9,6 +9,17 @@ text-shadow:
 	-1px 1px 0 #000,
 	1px 1px 0 #000
 }
+p {
+color: red;
+font-size: 200%;
+text-align: center;
+text-decoration: underline;
+text-shadow:		
+	-1px -1px 0 #000,
+	1px -1px 0 #000,
+	-1px 1px 0 #000,
+	1px 1px 0 #000
+}
 audio { 
    display:none;
 }
