--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ text-shadow:
 	1px -1px 0 #000,
 	-1px 1px 0 #000,
 	1px 1px 0 #000
+	
 }
 p {
 color: red;
@@ -20,17 +21,22 @@ text-shadow:
 	-1px 1px 0 #000,
 	1px 1px 0 #000
 }
+
 audio { 
    display:none;
 }
-div {
-display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-    -webkit-animation:spin 0.8s linear infinite;
-    -moz-animation:spin 0.8s linear infinite;
-    animation:spin 0.8s linear infinite;
+
+.image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 120px;
+    height: 120px;
+    margin:-60px 0 0 -60px;
+    -webkit-animation:spin 4s linear infinite;
+    -moz-animation:spin 4s linear infinite;
+    animation:spin 4s linear infinite;
+}
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
