--- a/style.css
+++ b/style.css
@@ -10,6 +10,19 @@ text-shadow:
 	1px 1px 0 #000
 	
 }
+
+h2 {
+color: orange;
+font-size: 300%;
+text-align: center;
+text-decoration: underline;
+text-shadow:		
+	-1px -1px 0 #000,
+	1px -1px 0 #000,
+	-1px 1px 0 #000,
+	1px 1px 0 #000
+}
+
 p {
 color: red;
 font-size: 200%;
@@ -27,7 +40,6 @@ audio {
 }
 
 div {
-    position: absolute;
     top: 50%;
     left: 50%;
     width: 120px;
