--- a/style.css
+++ b/style.css
@@ -40,10 +40,8 @@ audio {
 }
 
 .spin {
-    top: 50%;
-    left: 50%;
-    width: 120px;
-    height: 120px;
+    width: auto;
+    height: auto; 
     margin:-60px 0 0 -60px;
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
