--- a/style.css
+++ b/style.css
@@ -41,8 +41,9 @@ audio {
 
 .spin {
 	display: block;
-    width: auto;
-    height: auto; 
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
     margin:-60px 0 0 -60px;
     -webkit-animation:spin 1s linear infinite;
     -moz-animation:spin 1s linear infinite;
