--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ text-shadow:
 audio { 
    display:none;
 }
-
+/*
 .spin {
 	display: block;
     margin-left: auto;
@@ -51,4 +51,4 @@ audio {
 }
 @-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
 @-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
-@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } } */
