--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ audio {
     position: absolute;
     top: 50%;
     left: 50%;
+	width: 1200px;
+    height: 900px;
     margin:-60px 0 0 -60px;
     -webkit-animation:spin 1.1s linear infinite;
     -moz-animation:spin 1.1s linear infinite;
