--- a/style.css
+++ b/style.css
@@ -39,11 +39,8 @@ audio {
    display:none;
 }
 .spin {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-	width: 1200px;
-    height: 900px;
+position: fixed;
+    top:-100%; right:-100%; left:-100%; bottom:-100%;
     margin:-60px 0 0 -60px;
     -webkit-animation:spin 1.1s linear infinite;
     -moz-animation:spin 1.1s linear infinite;
