--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ audio {
    display:none;
 }
 .image {
-    position: absolute;
+    position: block;
     top: 50%;
     left: 50%;
     width: 500px;
