--- a/style.css
+++ b/style.css
@@ -39,12 +39,12 @@ audio {
    display:none;
 }
 .image {
-    position: block;
+    position: absolute;
     top: 50%;
     left: 50%;
     width: 500px;
     height: 500px;
-    margin:-250px 0 0 -250px;
+    margin:-60px 0 0 -60px;
     -webkit-animation:spin 1.1s linear infinite;
     -moz-animation:spin 1.1s linear infinite;
     animation:spin 1.1s linear infinite;
